First connection to DB
After some problems I got the DB connected.
Tags are removed to make life easier for the moment.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,17 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://localhost:5432/Sikuliator"
+#db.default.username=postgres
+#db.default.password="Sikuliator"
+
+slick.dbs.default.driver="slick.driver.PostgresDriver$" # You must provide the required Slick driver!
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/Sikuliator"
+slick.dbs.default.db.user=postgres
+slick.dbs.default.db.password="Sikuliator"
+slick.dbs.default.db.connectionPool = HikariCP
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
@@ -42,3 +53,5 @@ play.i18n.langs = [ "en" ]
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+#logger.scala.slick.jdbc.JdbcBackend.statement=DEBUG
